feat(resource-gateway): add draft-scoped authoring test tables